# UOGTO

./: .gitattributes  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONDUCTOR.md  CONTRIBUTING.md  LICENSE  LICENSE-CODE  Makefile  README.md  SECURITY.md  pixi.toml  pyproject.toml  release-please-config.json  validation_report.html
.conductor/: module-template.md  runlog.md  status.md  tasks.yaml
.github/: labels.yml  pull_request_template.md
.reuse/: dep5
.sourceright/: references.csl.json  references.verification.json  review-queue.jsonl
.tmp_mapping_calibration_test/: mapping-review.csv
.tmp_mapping_robustness_test/: mapping-review.csv
competency-questions/: cq01-list-players.rq  cq02-list-strategies.rq  cq03-find-equilibria.rq  cq04-games-with-incomplete-information.rq  cq05-security-games-with-targets.rq  cq06-mechanisms-with-incentive-constraints.rq  cq07-llm-games-with-tool-invocations.rq  cq08-executable-games-with-event-traces.rq  cq09-games-with-privacy-budget.rq  cq10-modules-and-imports.rq  cq11-mean-field-game-evidence.rq  cq12-routing-game-evidence.rq  cq13-evolutionary-game-evidence.rq  cq14-institution-and-information-design-evidence.rq  cq15-marl-learning-evidence.rq  cq16-trust-reputation-provenance-evidence.rq  cq17-hta-appraisal-game.rq  cq18-medical-treatment-choice.rq  cq19-safety-coordination-game.rq  cq20-genomic-data-access-game.rq  expected-results.json
conductor/: index.md  product-guidelines.md  product.md  remote_status.md  runlog.md  status.md  tech-stack.md  tracks.md  workflow.md
docs/: architecture.md  ci-supply-chain-policy.md  class-hierarchy.md  competency-questions.md  constraints-and-shacl.md  data-properties.md  deep_research_analysis.md  deep_research_part1.md  deep_research_part2.md  deep_research_part3.md  deep_research_part4.md  deep_research_part5.md  examples.md  glossary.md  how-to-cite-and-reuse-uogto.md  index.md  interoperability-benchmarks.json  interoperability-benchmarks.md  jsonld-bindings.md  modelling-decisions.md  ri-hero.md  (+14 more)
(+683 files in other folders)
