[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uogto"
version = "0.1.0"
description = "Universal Open Game Theory Ontology"
readme = "README.md"
authors = [
    { name = "UOGTO Contributors" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdflib>=7.0.0",
    "pyshacl>=0.25.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.0.0",
    "ruff>=0.3.0",
]

[tool.setuptools]
packages = []


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
