[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uogto"
version = "1.0.0"
description = "Universal Open Game Theory Ontology"
readme = "README.md"
authors = [
    { name = "UOGTO Contributors" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdflib>=7.0.0",
    "pyshacl>=0.25.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
runner = []
playground = [
    "streamlit>=1.36.0",
    "networkx>=3.3",
    "matplotlib>=3.8.0",
]

[project.scripts]
uogto-runner = "uogto.runner.engine:main"
uogto-playground = "uogto.playground.app:main"
uogto-runner-bench = "uogto.runner.llm_player:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["uogto*"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
